# Practise-17

./: go.mod  index.html  json.go  main.go  package-lock.json  package.json  pyproject.toml  voice_recorder.py
avacreations-nexus-hub-main (2)/src/components/: ArtisanDashboard.jsx  ProgramTeamDashboard.jsx
avacreations-nexus-hub-main (2)/src/pages/: Index.tsx
backend/: package-lock.json  package.json  server.js  supabaseClient.js
backend/routes/: example.js  production_logs.js
calculator/: nodejs_explanation.txt
frontend/: README.md
frontend/src/components/: ArtisanDashboard.jsx
frontend/src/pages/: Index.jsx
src/components/: ClusterLeaderDashboard.jsx
