[project]
name = "ai-agent-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.6.15",
    "google-genai>=1.24.0",
    "openai-whisper>=20250625",
    "python-dotenv>=1.1.1",
    "realtimestt>=0.3.104",
    "torch>=2.7.1",
    "whisper>=1.1.10",
]
